Fix navigation overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -190,7 +190,6 @@ main {
 
     ul {
       display: block;
-      width: 100%;
       padding-top: 30px;
       padding-bottom: 50px;
 
